--- a/css/style2.css
+++ b/css/style2.css
@@ -242,6 +242,11 @@ ul{
 
 .hoverCS {
     color:#F8E00A;
+    width: 284px;
+    height: 86px;
+    flex-shrink: 0;
+    text-align: left;
+    padding-left: 20px;
 }
 
 .grid1{
@@ -403,7 +408,7 @@ text-align: left;
 padding: 20px;
 cursor: pointer;} 
 
-.csd>p{
+.csd>.p{
     width: 284px;
     height: 86px;
     flex-shrink: 0;
