--- a/css/style2.css
+++ b/css/style2.css
@@ -58,35 +58,41 @@ p small {
 /* 1.Header & Navigation */
 
 .navigation{
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
-    grid-template-rows: auto;
+    display: flex;
+    margin-bottom: 40px;
+    /* grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-rows: auto; */
 }
 
 .logo{
-    grid-area: logo;
+    /* grid-area: logo; */
+    justify-content: start;
+    order: 1;
     /* outline: 1px solid red; */
-    grid-column: 1 / span 4;
+    /* grid-column: 1 / span 4;
     grid-row: 1;
-    margin: 20px;
+    margin: 20px; */
 }
 
 .navigationBar{
-    grid-area: navigationBar;
-    /* outline: 1px solid red; */
+    /* grid-area: navigationBar; 
+    outline: 1px solid red; 
     grid-column: 1 / span 9;
     grid-row: 1;
-    margin: 0px -200px 20px 0px;
+    margin: 0px -200px 20px 0px; */
+   order: 2;
 }
 
 .socialmediaIcon{
-    grid-area: socialmediaIcon;
+    /* grid-area: socialmediaIcon;
     /* outline: 1px solid red; */
-    grid-column: 10 / span 2;
-    grid-row: 1;
+    /* grid-column: 10 / span 2;
+    grid-row: 1; */
     justify-content: end;
-    margin: 0px 0px 20px 0px;
-    padding-top: 50px;
+    align-items: center;
+    order: 3;
+    /* margin: 0px 0px 20px 0px;
+    padding-top: 50px; */
     display: flex;
 }
 
@@ -143,15 +149,16 @@ color: #9E7B9B;
 
 nav{
     width: 90%;
-    padding:1%;
+    /* padding:1%; */
     text-align: center;
 }
 nav li{
-    padding: 3%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 ul{
     width: 50%;
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 
 /*  2.Hero Image  */
@@ -557,15 +564,11 @@ transform: scale(0.8);
 
 /* Mobile Media Query */
 
-@media screen and (max-width: 600px) { 
-        .alldesignprocess{
-        height: 2000px;
-        }
-
+@media only screen and (max-width: 600px) { 
         .designProcess{
         display: flex;
         flex-direction: column;
-        outline: 1px solid red;}
+        background-color: lightblue;}
 
         .grid1{
         display: grid;
